Fix issue where cursor appeared too large in GeoSearch

--- a/src/styles/components/GeoSearch.less
+++ b/src/styles/components/GeoSearch.less
@@ -6,7 +6,6 @@
   border-radius: 5px;
   font-size: 1rem;
   height: 42px;
-  line-height: 42px;
 }
 
 .GeoSearch .ap-footer {
